--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,8 +15,8 @@
         <p>Test statement</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/theaamirnasir" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Resume
+        <a href="https://www.linkedin.com/in/theaamirnasir/" class="btn btn-lg btn-outline">
+          <i class="fa fa-download"></i> Aamir's LinkedIn
         </a>
       </div>
     </div>
