--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,7 +16,7 @@
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <a href="https://www.linkedin.com/in/theaamirnasir/" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Aamir's LinkedIn
+          <i class="fa fa-download"></i>LinkedIn
         </a>
       </div>
     </div>
