--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,14 +9,13 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis tellus ante. Cras consequat ligula in tincidunt interdum. Nunc at aliquam ipsum. Nulla eget magna in sem malesuada fringilla. Ut accumsan tristique enim eu imperdiet. Nulla vestibulum eu risus condimentum volutpat.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus quis tellus ante. Cras consequat tincidunt interdum. Nunc at aliquam ipsum. Nulla eget magna in sem malesuada fringilla. Ut accumsan tristique enim eu imperdiet. Nulla vestibulum eu risus condimentum volutpat.</p>
       </div>
       <div class="col-lg-4">
-        <p>Fusce accumsan eros sit amet erat laoreet luctus. Cras commodo velit in felis suscipit, eget pharetra mauris commodo. Donec condimentum lectus vel fermentum malesuada. Curabitur varius imperdiet justo sit amet interdum. Donec iaculis nisl non risus fermentum lacinia. Nullam a elementum nisl.</p>
+        <p>Fusce accumsan eros sit amet erat laoreet luctus. Donec condimentum lectus vel fermentum malesuada. Curabitur varius imperdiet justo sit amet interdum. Donec iaculis nisl non risus fermentum lacinia. Nullam a elementum nisl.</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://www.linkedin.com/in/theaamirnasir/" class="btn btn-lg btn-outline">LinkedIn
-        </a>
+       <a href="https://www.linkedin.com/in/theaamirnasir/" target="_blank" rel="noopener noreferrer" class="btn btn-lg btn-outline">LinkedIn</a>
       </div>
     </div>
   </div>
