--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
         <p>Fusce accumsan eros sit amet erat laoreet luctus. Donec condimentum lectus vel fermentum malesuada. Curabitur varius imperdiet justo sit amet interdum. Donec iaculis nisl non risus fermentum lacinia. Nullam a elementum nisl.</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-       <a href="https://www.linkedin.com/in/theaamirnasir/" target="_blank" rel="noopener noreferrer" class="btn btn-lg btn-outline">LinkedIn</a>
+       <a href="https://www.linkedin.com/in/theaamirnasir/" target="_blank" rel="noopener noreferrer" class="btn btn-lg btn-outline">Résumé</a>
       </div>
     </div>
   </div>
