--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,10 +19,10 @@
           <a href="#page-top"></a>
         </li>
         <li class="page-scroll">
-          <a href="#portfolio">About</a>
+          <a href="#portfolio">Portfolio</a>
         </li>
         <li class="page-scroll">
-          <a href="#about">Portfolio</a>
+          <a href="#about">About</a>
         </li>
         <li class="page-scroll">
           <a href="#contact">Contact</a>
