--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -13,6 +13,12 @@
         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
+              <i><h1>This is heading 1</h1>
+                 <h2>This is heading 2</h2>
+                 <h3>This is heading 3</h3>
+                 <h4>This is heading 4</h4>
+                 <h5>This is heading 5</h5>
+                 <h6>This is heading 6</h6> </i>
               <!--<i class="fa fa-search-plus fa-3x"></i>-->
             </div>
           </div>
