--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -13,9 +13,7 @@
         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
-              <h3>This is heading 3</h3>
-              <h4>This is heading 4</h4>
-              <!--<i class="fa fa-search-plus fa-3x"></i>-->
+              <i class="fa fa-search-plus fa-3x"></i>
             </div>
           </div>
           <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
